--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,10 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+@import "tailwindcss";           /* components + utilities 전부 포함됨 */
+@font-face {
+  font-family: 'Jalnan2TTF';
+  src: url('/fonts/Jalnan2TTF.ttf') format('truetype');
+  font-weight: 1;
+  font-style: normal;
 }
-
 a {
   font-weight: 500;
   color: #646cff;
@@ -24,6 +15,7 @@ a:hover {
 }
 
 body {
+  font-family: 'Jalnan2TTF', sans-serif;
   margin: 0;
   display: flex;
   place-items: center;
