--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,3 +2,17 @@
     position: relative;
     width: 100%;
 }
+.main-container {
+    background-image: url('/images/main_image.jpg'); /* 배경 이미지 경로 */
+    background-size: cover; /* 이미지를 컨테이너에 맞게 조정 */
+    background-position: center; /* 이미지를 중앙에 위치 */
+    background-repeat: no-repeat; /* 이미지 반복 방지 */
+    width: 100%;
+    height: 40vh; /* 화면 전체 높이 */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white; /* 텍스트 색상 */
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); /* 텍스트 가독성을 위한 그림자 */
+}
